Custom bundle oluşturulup denendi

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -5,3 +5,7 @@ controllers:
 kernel:
     resource: ../../src/Kernel.php
     type: annotation
+
+test-bundle-controller:
+    resource: ../../src/TSF/TestBundle/Controller/
+    type: annotation
